  22-Mar-2020    V0.52 Add backup and restore methods in  UniProtIdMappingProvider()
  23-Mar-2020    V0.53 Add clearCache methods and preserve loaded state across multiple instances of UniProtIdMappingProvider()
  10-May-2021    V0.54 Add feature and gene lookup method in UniProtUtils()
  10-May-2021    V0.55 Adjust return prototype for lookup functions
  10-May-2021    V0.56 Add review option for doGeneLookup()
  10-May-2021    V0.57 Adjustments to UniProt FASTA comment line parser
  26-May-2021    V0.58 Add Pfam mapping methods and GlyGenProvider() and associated tests
  27-May-2021    V0.59 Tweaking diagnostic output in GlyGenProvider()
  28-May-2021    V0.60 Add read-only version of GlycanProvider() and associated tests
  30-May-2021    V0.61 Add getVersion() method in PfamProvider().
  30-Jun-2021    V0.62 Make GlycanProvider() a subclass of StashableBase(), update __docformat__
  24-Jul-2021    V0.63 Make SiftsSummaryProvider() a subclass of StashableBase()
  14-Mar-2022    V0.64 Adjust parsing logic of ParentChildTreeFile.txt in InterProProvider.__getInterProParents()
  16-May-2022    V0.65 Update GlyGenProvider resource URL location
  25-Jul-2022    V0.66 Adjust UniProtUtils to temporarily use the legacy baseUrl (legacy.uniprot.org) for API calls
   4-Oct-2022    V0.67 Update UniProtUtils code to use new UniProt API
  10-Oct-2022    V0.68 Update URLs to InterPro data, and add better error catching for InterPro provider tests
  11-Oct-2022    V0.69 Only use secondary service site (EBI) for bulk UniProt XML requests
  26-Nov-2022    V0.70 Fix UniProtUtils primary API fetching method
  28-Nov-2022    V0.71 Add functionality to search primary service using secondary accession IDs (in case of obsoleted IDs)
   9-Jan-2023    V0.72 Configuration changes to support tox 4
   6-Feb-2023    V0.73 Resolve pylint issues
  23-Feb-2023    V0.74 Fix UniProtUtils primary fetching service to handle cases with invalid UniProt IDs